# model-forensics

./: .env.example  .gitignore  README.md  README.zh-CN.md  pyproject.toml
examples/: reference.yaml  targets.yaml
src/model_forensics/: __init__.py  config.py
src/model_forensics/adapters/: __init__.py  anthropic.py  base.py  factory.py  openai.py
src/model_forensics/analyzers/: __init__.py  anomaly.py  comparison.py  matching.py
src/model_forensics/catalog/: __init__.py  cases.py
src/model_forensics/cli/: __init__.py  app.py
src/model_forensics/embedding/: __init__.py  openai.py
src/model_forensics/execution/: __init__.py  runner.py
src/model_forensics/reports/: __init__.py  render.py
src/model_forensics/schemas/: __init__.py  models.py
src/model_forensics/storage/: __init__.py  database.py
src/model_forensics/utils/: __init__.py  text.py
tests/: test_anomaly.py  test_comparison.py  test_config.py  test_inspect_no_refs.py  test_matching.py  test_storage.py
