[project]
name = "model-forensics"
version = "0.1.0"
description = "CLI for LLM anomaly screening and reference-model matching."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Leo" }]
dependencies = [
    "httpx>=0.28.1",
    "numpy>=2.2.5",
    "orjson>=3.10.18",
    "pydantic>=2.11.3",
    "pyyaml>=6.0.2",
    "rich>=14.0.0",
    "typer>=0.15.2",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "respx>=0.22.0",
    "ruff>=0.11.7",
]

[project.scripts]
mforensics = "model_forensics.cli.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/model_forensics"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
